Closed
Bug 1198450
Opened 10 years ago
Closed 10 years ago
[e10s] Firefox fails to load "about:home" if Firefox was installed to a folder with non-Latin name
Categories
(Firefox :: General, defect)
Tracking
()
RESOLVED
FIXED
Firefox 45
People
(Reporter: alice0775, Assigned: blassey)
Details
Attachments
(2 files)
|
41.71 KB,
image/png
|
Details | |
|
1.52 KB,
patch
|
jimm
:
review+
|
Details | Diff | Splinter Review |
The problem does not happen when disabled e10s.
Steps To Reproduce:
1. Install Firefox to to a folder with non-Latin name such as "ファイアフォックス"
2. Launch Firefox
3. Try open about:home
Actual Results:
An error page is loaded.
!The address isn't valid
The URL is not valid and cannot be loaded.
・Web addresses are usually written like http://www.example.com/
・Make sure that you're using forward slashes (i.e. /).
[ Try Agan ]
Expected Results:
about:home should be shown.
| Reporter | ||
Comment 1•10 years ago
|
||
The failure happens if non-Latin character was included in the installed path.
| Assignee | ||
Updated•10 years ago
|
Assignee: nobody → blassey.bugs
| Assignee | ||
Updated•10 years ago
|
Assignee: blassey.bugs → mrbkap
| Assignee | ||
Updated•10 years ago
|
Assignee: mrbkap → blassey.bugs
| Assignee | ||
Comment 3•10 years ago
|
||
as the commented out warning says[1] "This API is lossy. Use GetPath !"
1 http://mxr.mozilla.org/mozilla-central/source/xpcom/io/nsLocalFileWin.cpp#3443
Attachment #8691085 -
Flags: review?(jmathies)
Comment 4•10 years ago
|
||
Comment on attachment 8691085 [details] [diff] [review]
no_native_path_win.patch
Review of attachment 8691085 [details] [diff] [review]:
-----------------------------------------------------------------
PerformAsyncLaunchInternal really needs to be broken down by platform. Total ifdef nightmare.
::: ipc/glue/GeckoChildProcessHost.cpp
@@ +546,5 @@
> + MOZ_ALWAYS_TRUE(NS_SUCCEEDED(appDir->GetPath(path)));
> + aCmdLine.AppendLooseValue(UTF8ToWide("-appdir"));
> + std::wstring wpath = path.get();
> + aCmdLine.AppendLooseValue(wpath);
> + wprintf(L"converted: %s\n", wpath.c_str());
nit - remove the debug printf
Attachment #8691085 -
Flags: review?(jmathies) → review+
Comment 6•10 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox45:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → Firefox 45
Comment 8•10 years ago
|
||
| bugherder | ||
Comment 9•9 years ago
|
||
I have reproduced this bug with Firefox Nightly 43.0a1 (Build ID: 20150825030212) on windows 8.1 64-bit with the instructions from comment 0 .
Verified as fixed with Firefox Aurora 45.0a2 (Build ID: 20160116004013)
Mozilla/5.0 (Windows NT 6.3; WOW64; rv:45.0) Gecko/20100101 Firefox/45.0
QA Whiteboard: [testday-20160115]
You need to log in
before you can comment on or make changes to this bug.
Description
•