bug 1198450 - Firefox fails to load about:home if Firefox was installed to a folder with non-Latin name r=jimm